--- a/src/jm-responsive-slider.css
+++ b/src/jm-responsive-slider.css
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: 'calypso_e_heitalic';
-  src: url("fuentes/calypsoe/calypsoe-heavyitalic-webfont.eot");
-  src: url("fuentes/calypsoe/calypsoe-heavyitalic-webfont.eot?#iefix") format("embedded-opentype"), url("fuentes/calypsoe/calypsoe-heavyitalic-webfont.woff") format("woff"), url("fuentes/calypsoe/calypsoe-heavyitalic-webfont.ttf") format("truetype"), url("fuentes/calypsoe/calypsoe-heavyitalic-webfont.svg#calypso_e_heitalic") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
 .n-controls {
   display: block;
   position: absolute;
@@ -45,6 +37,20 @@
   right: 4%;
 }
 
+.slidecontent {
+  overflow: hidden;
+}
+
 .slide {
   float: left;
+  display: none;
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
 }
