--- a/src/sass/jm-responsive-slider.scss
+++ b/src/sass/jm-responsive-slider.scss
@@ -21,6 +21,18 @@
 			right: 4%;
 		}
 	}
+	.slidecontent{
+		overflow: hidden;
+	}
 	.slide{
 		float:left;
 	}
+
+	.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
