matener avance en redimencionamiento

--- a/src/jm-responsive-slider.css
+++ b/src/jm-responsive-slider.css
@@ -4,7 +4,8 @@
   width: 7em;
   height: 7em;
   z-index: 1000;
-  top: 18%;
+  top: 50%;
+  margin-top: -3.5em;
   cursor: hand;
   cursor: pointer;
 }
