ejemplo basico agregado

--- a/src/sass/jm-responsive-slider.scss
+++ b/src/sass/jm-responsive-slider.scss
@@ -7,7 +7,8 @@
 		width: 7em;
 		height: 7em;
 		z-index: 1000;
-		top: 18%;
+		top: 50%;
+		margin-top: -3.5em;
 		cursor: hand;
 		cursor: pointer;
 		&.izq {
@@ -21,6 +22,19 @@
 			right: 4%;
 		}
 	}
+	.slidecontent{
+		overflow: hidden;
+	}
 	.slide{
 		float:left;
+		display: none;
 	}
+
+	.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
